// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contexts > createAsyncComputed > computed signals are cached per context scope 1`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed > computed signals are cached per context scope 2`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed > computed signals are cached per context scope 3`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed > computed signals are cached per context scope 4`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed > computed signals are cached per context scope 5`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 4,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 13,
    "set": 0,
    "compute": 3,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 3,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 3,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 3,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createAsyncComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 3,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 9,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 9,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  null,
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createAsyncComputed, createSubscription > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed > computed signals are cached per context scope 1`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed > computed signals are cached per context scope 2`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed > computed signals are cached per context scope 3`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed > computed signals are cached per context scope 4`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed > computed signals are cached per context scope 5`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 4,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 9,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createAsyncComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 5,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 5,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createComputed, createSubscription > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription > computed signals are cached per context scope 1`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription > computed signals are cached per context scope 2`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription > computed signals are cached per context scope 3`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription > computed signals are cached per context scope 4`] = `
[
  "other0",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription > computed signals are cached per context scope 5`] = `
[
  "default0",
  {
    "name": "reactiveFn",
    "get": 4,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 9,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createAsyncComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 3,
    "set": 0,
    "compute": 2,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 5,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createComputed > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 1`] = `
[
  "default2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 5,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 2`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 3`] = `
[
  "default2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 4`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 5`] = `
[
  "override2override1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 6`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 7`] = `
[
  "override2default1:inner-override2",
  {
    "name": "reactiveFn",
    "get": 0,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > context scopes inherit from parent scope when nested in computeds 8`] = `
[
  "default1default2",
  {
    "name": "reactiveFn",
    "get": 1,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > contexts are properly scoped 1`] = `
[
  "default",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;

exports[`contexts > createSubscription, createSubscription > contexts are properly scoped 2`] = `
[
  "override",
  {
    "name": "reactiveFn",
    "get": 2,
    "set": 0,
    "compute": 1,
    "resolve": 0,
    "subscribe": 0,
    "update": 0,
    "unsubscribe": 0,
    "internalGet": 0,
    "internalSet": 0,
    "error": 0,
    "effect": 0
  }
]
`;
